kubernetes-manifests/manifests/staging-manifest/certs/cert-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  annotations: 
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: frontend
spec: 
  rules: 
    - 
      host: staging.rair.market
      http: 
        paths: 
          - 
            backend: 
              serviceName: frontend
              servicePort: 80
            path: /
  tls: 
    - 
      hosts: 
        - staging.rair.martket
      secretName: rair
